[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameElements/GameElements.gd" type="Script" id=1]
[ext_resource path="res://GameElements/WorldManager.gd" type="Script" id=2]
[ext_resource path="res://GameElements/PlayerModiManager.gd" type="Script" id=3]
[ext_resource path="res://GameElements/ObjectManager.gd" type="Script" id=4]
[ext_resource path="res://GameElements/OtherNodeHoster.gd" type="Script" id=5]

[node name="GameElements" type="Node"]
script = ExtResource( 1 )

[node name="WorldManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="PlayerModiManager" type="Node" parent="."]
script = ExtResource( 3 )

[node name="ObjectManager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="OtherNodeHoster" type="Node" parent="."]
script = ExtResource( 5 )
